package solid.ocp.compliant;

public abstract class DrivingMode {

    public abstract void applyMode(Vehicle v);
}
