' Generated by UML Generator
' Encoded: ZL8xRyCW4Dxv5OnsAwBE7g9KRQLqg5J9KdS2L_jK6n2SNVNrtnj2xT0uGpRu7jntTsm2IKz3tx7mXiP9BtkkEXd2BP77tK3mgAofyHFu3MjH0rVeLGUC7LJyplQlrXF_OfnVI-UwZoUheHWh_W8jxeLbnKUBclqm9dU1l5IK2l1xZoEQ9keliYVNmmY6jjBe3lp19iQad2qH4_6zN5gSgigeKAqq3MH12dqyLtd2HOxQNTfsql_XARApx-0hZeRYBGp1WGbepHQmQMac3bqqGCzHNfGJ7g7wn9EnOJ8Sgqnf4hlmdWsGTJ0jMOZlTJwKcLYjrlFqyxNc-B_5NGbndeYEl48Qyw9mWlFdDs3q_Xl_0W
' URL: http://www.plantuml.com/plantuml/uml/ZL8xRyCW4Dxv5OnsAwBE7g9KRQLqg5J9KdS2L_jK6n2SNVNrtnj2xT0uGpRu7jntTsm2IKz3tx7mXiP9BtkkEXd2BP77tK3mgAofyHFu3MjH0rVeLGUC7LJyplQlrXF_OfnVI-UwZoUheHWh_W8jxeLbnKUBclqm9dU1l5IK2l1xZoEQ9keliYVNmmY6jjBe3lp19iQad2qH4_6zN5gSgigeKAqq3MH12dqyLtd2HOxQNTfsql_XARApx-0hZeRYBGp1WGbepHQmQMac3bqqGCzHNfGJ7g7wn9EnOJ8Sgqnf4hlmdWsGTJ0jMOZlTJwKcLYjrlFqyxNc-B_5NGbndeYEl48Qyw9mWlFdDs3q_Xl_0W
' Generated on: 2026-03-19T09:39:18.924565100

@startuml
skinparam classAttributeIconSize 0
hide circle

class Comfort {
  +applyMode(v: Vehicle): void
}

abstract class DrivingMode {
  +applyMode(v: Vehicle): void
}

class EventHandler {
  -vehicle: Vehicle
  --
  +EventHandler(vehicle: Vehicle)
  +changeDrivingMode(drivingMode: DrivingMode): void
}

class Sport {
  +applyMode(v: Vehicle): void
}

class Vehicle {
  -power: int
  -suspensionHeight: int
  --
  +getPower(): int
  +getSuspensionHeight(): int
  +setPower(power: int): void
  +setSuspensionHeight(suspensionHeight: int): void
}

Comfort --|> DrivingMode
Comfort ..> Vehicle
DrivingMode ..> Vehicle
EventHandler *-- Vehicle
EventHandler ..> DrivingMode
Sport --|> DrivingMode
Sport ..> Vehicle
@enduml